bug fixes in overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 .App{
+    overflow-y: hidden !important;
     color : white;
     background-color: black;
     min-height: 100vh;
@@ -17,10 +18,13 @@
             color : black;
         }
     }
+    .cards{
+        padding-left : 80px;
+    }
     .mail{
         position: fixed;
-        right: 10px;
-        bottom: 10px;
+        right: 5px !important;
+        bottom: 5px !important;
         cursor: pointer;
         .mailimg{
             height: 90px;
